# S8-53M2

./: .gitignore  readme.txt
doc/: Испытания.txt  план.txt  (+3 more)
sources/Device/: CMakeLists.txt  Device.uvguix.IVAN  Device.uvguix.Sasha7b9  Device.uvoptx  Device.uvprojx  S8-53.sct
sources/Device/src/: Device.cpp  Device.h  GlobalEvents.cpp  GlobalEvents.h  Globals.cpp  Globals.h  Log.cpp  Log.h  Tables.cpp  Tables.h  defines.cpp  defines.h  globals.cpp  globals.h  main.cpp  main.h
sources/Device/src/Data/: Data.cpp  Data.h  DataController.cpp  DataController.h  DataExtensions.cpp  DataExtensions.h  Measures.cpp  Processing.cpp  Processing.h  ProcessingSignal.cpp  Storage.cpp  Storage.h
sources/Device/src/Display/: Colors.cpp  Colors.h  Console.cpp  DataPainter.cpp  DataPainter.h  Display.cpp  Display.h  DisplayPrimitives.cpp  DisplayPrimitives.h  DisplayTypes.h  Grid.cpp  Grid.h  Math3D.cpp  Math3D.h  Painter.cpp  Painter.h  PainterC.h  PainterMem.cpp  PainterMem.h  PainterText.cpp  PainterText.h  String.cpp  String.h  Tables.cpp  Text.cpp  Text.h  Warnings.cpp  Warnings.h  WelcomeScreen.cpp  WelcomeScreen.h
sources/Device/src/Display/Screen/: Console.cpp  Console.h  Grid.cpp  HiPart.cpp  LowPart.cpp
sources/Device/src/Display/font/: Font.cpp  Font.h
sources/Device/src/Ethernet/: LAN.cpp  LAN.h  TcpSocket.cpp  TcpSocket.h
sources/Device/src/FDrive/: FDrive.cpp  FDrive.h
sources/Device/src/FPGA/: AutoFinder.cpp  CalibrationFPGA.cpp  CalibrationFPGA_old.cpp  CalibratorFPGA.h  FPGA.cpp  FPGA.h  FPGA_Calibration.cpp  FPGA_Settings.cpp  FPGA_Types.h  FPGA_old.cpp  FreqMeter.cpp  ReaderFPGA.cpp  SettingsFPGA.cpp  SettingsFPGA.h  Storage.cpp  Storage.h  StructuresFPGA.cpp  StructuresFPGA.h  TypesFPGA.h  TypesFPGA_old.h
sources/Device/src/FPGA/_old/: FPGA_old.cpp
sources/Device/src/FlashDrive/: FlashDrive.cpp  FlashDrive.h
sources/Device/src/Hardware/: ADC.cpp  ADC.h  CLOCK.cpp  CLOCK.h  DisplayHardware.inc  EPROM.cpp  EPROM.h  ExternalGenerator.cpp  ExternalGenerator.h  FSMC.cpp  FSMC.h  Hardware.cpp  Hardware.h  InterCom.cpp  InterCom.h  MSP_USBH.cpp  Sound.cpp  Sound.h  Timer.cpp  Timer.h
sources/Device/src/Hardware/FDrive/: FDrive.cpp  FDrive.h  ffconf.h  usbh_conf.cpp  usbh_conf.h  usbh_diskio.cpp
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC1.cpp  HAL_ADC3.cpp  HAL_CRC32.cpp  HAL_DAC1.cpp  HAL_FMC.cpp  HAL_HCD.cpp  HAL_IT.cpp  HAL_LTDC.cpp  HAL_PCD.cpp  HAL_PINS.cpp  HAL_ROM.cpp  HAL_ROM.h  HAL_RTC.cpp  HAL_SPI1.cpp  HAL_SPI5.cpp  HAL_TIM2.cpp  HAL_TIM6.cpp  HAL_USBH.cpp  startup_stm32f429xx.s  stm32f4xx_hal_conf.h  system_stm32f4xx.c
sources/Device/src/Hardware/LAN/: LAN.cpp  LAN.h  SocketTCP.cpp  SocketTCP.h  app_ethernet.cpp  ethernetif.c  ethernetif.cpp  lwipopts.h  tcp_echoserver.cpp  tcp_echoserver.h
sources/Device/src/Hardware/VCP/: VCP.cpp  VCP.h  usbd_cdc_interface.cpp
sources/Device/src/LAN/: LAN.cpp  LAN.h  SocketTCP.cpp  TcpSocket.cpp  TcpSocket.h
sources/Device/src/Menu/: FileManager.cpp  FileManager.h  Menu.cpp  Menu.h  MenuDrawing.cpp  MenuFunctions.cpp  MenuItems.cpp  MenuItems.h  MenuItemsDefs.h  MenuItemsGraphics.cpp  MenuItemsGraphics.h  MenuItemsLogic.cpp  MenuItemsLogic.h  MenuPagesNames.h
sources/Device/src/Menu/Pages/: Definition.cpp  Definition.h  HelpContent.cpp  HelpContent.h  HelpContentPages.h  PageChannels.cpp  PageCursors.cpp  PageCursors.h  PageDebug.cpp  PageDebug.h  PageDisplay.cpp  PageHelp.cpp  PageHelp.h  PageMeasures.cpp  PageMeasures.h  PageMemory.cpp  PageMemory.h  PageService.cpp  PageService.h  PageTime.cpp  PageTrig.cpp
sources/Device/src/Panel/: Controls.cpp  Controls.h  Controls_Old.cpp  Controls_Old.h  Panel.cpp  Panel.h  PanelFunctions.cpp
sources/Device/src/SCPI/: BufferSCPI.cpp  BufferSCPI.h  Map.cpp  Map.h  SCPI.cpp  SCPI.h  SCPI.txt  channelSCPI.cpp  commonSCPI.cpp  controlSCPI.cpp  displaySCPI.cpp  tbaseSCPI.cpp  trigSCPI.cpp
sources/Device/src/Settings/: Settings.cpp  Settings.h  SettingsChannel.cpp  SettingsChannel.h  SettingsCursors.cpp  SettingsCursors.h  SettingsDebug.cpp  SettingsDebug.h  SettingsDisplay.cpp  SettingsDisplay.h  SettingsMath.h  SettingsMeasures.h  SettingsMemory.cpp  SettingsMemory.h  SettingsNRST.cpp  SettingsNRST.h  SettingsService.cpp  SettingsService.h  SettingsTime.cpp  SettingsTime.h  SettingsTrig.h  SettingsTypes.cpp  SettingsTypes.h
sources/Device/src/Utils/: Debug.cpp  Debug.h  Generator.cpp  Generator.h  GlobalFunctions.cpp  GlobalFunctions.h  Map.cpp  Map.h  Math.cpp  Math.h  Measures.cpp  Measures.h  PasswordResolver.cpp  ProcessingSignal.cpp  ProcessingSignal.h  Strings.cpp  Strings.h  TablesLog.h
sources/Device/src/VCP/: VCP.cpp  VCP.h
sources/Device/src/libs/: USBH.cpp  USBH.h  app_ethernet.cpp  app_ethernet.h  ethernetif.cpp  ethernetif.h  ffconf.h  lwipopts.h  startup_stm32f429xx.s  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.cpp  stm32f4xx_it.cpp  stm32f4xx_it.h  system_stm32f2xx.c  system_stm32f4xx.c  usbd_cdc_interface.cpp  usbd_cdc_interface.h  usbd_conf.c  usbd_conf.h  usbd_desc.cpp  usbd_desc.h  usbh_conf.cpp  usbh_conf.h  usbh_diskio.c  usbh_diskio.cpp  usbh_diskio.h
sources/Loader/: CMakeLists.txt  Loader.uvguix.IVAN  Loader.uvguix.Sasha7b9  Loader.uvoptx  Loader.uvprojx
sources/Loader/Objects-Debug/: S8-53.lnp
sources/Loader/src/: defines.h  globals.h  main.cpp  main.h
sources/Loader/src/Display/: Colors.cpp  Colors.h  Colors_stm.cpp  Display.cpp  Display.h  DisplayTypes.h  Painter.cpp  Painter.h  PainterC.h  PainterText.cpp  PainterText.h
sources/Loader/src/FlashDrive/: FlashDrive.c  FlashDrive.h
sources/Loader/src/Hardware/: FLASH.c  FLASH.h  FSMC.c  FSMC.h  Hardware.c  Hardware.h  Timer.c  Timer.h
sources/Loader/src/Panel/: Controls.c  Controls.h  Panel.c  Panel.h
sources/Loader/src/Settings/: Settings.cpp  Settings.h  SettingsTypes.h
sources/Loader/src/Utils/: GlobalFunctions.c  GlobalFunctions.h  Math.c  Math.h  StringUtils.cpp
sources/Loader/src/libs/: ffconf.h  stm32f2xx_hal_msp.c  stm32f2xx_it.c  stm32f2xx_it.h  stm32f4xx_hal_conf.h  system_stm32f2xx.c  usbh_conf.c  usbh_conf.h  usbh_diskio.c  usbh_diskio.h
(+293 files in other folders)
